--- a/components/podiumlist/default.htm
+++ b/components/podiumlist/default.htm
@@ -7,7 +7,7 @@
             <p>
                 <span class="list-item"><i class="fa fa-list"></i></span> Catégorie {{ result.category }}<br>
                 <span class="list-item"><i class="fa fa-calendar-o"></i></span> {{ result.date | date('F Y') }}<br>
-                <span class="list-item"><i class="fa fa-bicycle"></i></span> {{ result.discipline }}<br>
+                <span class="list-item"><i class="fa fa-tag"></i></span> {{ result.discipline }}<br>
                 <span class="list-item"><i class="fa fa-map-marker"></i></span> {{ result.location}}
             </p>
         </div>
